--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "auth0": "^4.10.0",
     "crypto": "^1.0.1",
     "next": "14.2.4",
     "react": "^18",
