--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "auth0": "^4.10.0",
     "crypto": "^1.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "reactstrap": "^9.2.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
